--- a/src/main/resources/templates/dict/top.html
+++ b/src/main/resources/templates/dict/top.html
@@ -1,29 +1,30 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
-<html>
 <head>
-    <title>${title}</title>
-    <script src="<c:url value="/js/jquery-2.1.4.min.js" />"></script>
-    <%-- Bootstrap --%>
-    <link href="<c:url value="/bootstrap/css/bootstrap.min.css" />" rel="stylesheet">
-    <link href="<c:url value="/bootstrap/css/bootstrap-theme.min.css" />" rel="stylesheet">
-    <script src="<c:url value="/bootstrap/js/bootstrap.min.js" />"></script>
+    <title>Welcome</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link href="<c:url value="/css/style.css" />" rel="stylesheet">
-    <script src="<c:url value="/js/top.js" />"></script>
+    <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
+    <!--Bootstrap-->
+    <link th:href="@{/bootstrap/css/bootstrap.min.css}"
+          rel="stylesheet"/>
+    <link th:href="@{/bootstrap/css/bootstrap-theme.min.css}"
+          rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{/js/top.js}"></script>
 </head>
-<body>
 
+<body>
 
 <div id="container" class="panel panel-default">
     <div class="panel-body">
 
         <div class="panel panel-primary">
             <div class="panel-heading" id="dict-word">
-                <c:out value="${wordrank.wordName}"/>
+                <span th:text="${wordrank.wordName}"></span>
             </div>
             <div class="panel-body">
                 <div id="dict-definition"></div>
@@ -46,19 +47,19 @@
 
         <div class="well">
             <div class="dictentry-row">
-                Rank: <c:out value="${wordrank.rankValue}"/>
+                Rank: <span th:text="${wordrank.rankValue}"></span>
             </div>
             <div class="dictentry-row">
-                Last use: <c:out value="${wordrank.lastUse}"/>
+                Last use: <span th:text="${wordrank.lastUse}"></span>
             </div>
         </div>
 
     </div>
 </div>
 
-<script>
-    rankId = <c:out value="${wordrank.rankId}"/>;
-    wordDefinition = "<c:out value="${wordrank.definition}"/>";
+<script th:inline="javascript">
+    rankId = [[${wordrank.rankId}]];
+    wordDefinition = [[${wordrank.definition}]];
 </script>
 
 </body>
