Introduce thymeleaf layout dialect

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,3 +30,14 @@ body {
     text-align: center;
     margin-top: 10px;
 }
+
+.row-form-center {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.row-form-center > label {
+    text-align: left;
+    margin-top: 10px;
+    width: 100%;
+}
