--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -1,62 +1,57 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<!DOCTYPE html >
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/main-layout}">
 <head>
-    <title>Welcome</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Settings</title>
 
-    <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
-    <!--Bootstrap-->
-    <link th:href="@{/bootstrap/css/bootstrap.min.css}"
-          rel="stylesheet"/>
-    <link th:href="@{/bootstrap/css/bootstrap-theme.min.css}"
-          rel="stylesheet"/>
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
-
-    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link th:href="@{/css/style2.css}" rel="stylesheet"/>
 </head>
-
 <body>
 
-<div id="container" class="panel panel-default">
-    <div class="panel-body">
+<th:block layout:fragment="content">
 
-        <div class="panel panel-primary">
-            <div class="panel-heading" id="dict-word">Settings</div>
-            <div class="panel-body">
+    <div class="panel panel-primary">
+        <div class="panel-heading" id="dict-word">Settings</div>
+        <div class="panel-body">
 
-                <form method="post" action="?" modelAttribute="settingsDTO"
-                      class="form-horizontal">
-                    <div>
-                        User:
-                        <select class="form-control" th:field="${settingsDTO.userId}"
-                                id="userLogin">
-                            <option th:each="user : ${users}"
-                                    th:value="${user.id}"
-                                    th:selected="${user.id == settingsDTO.userId}"
-                                    th:text="${user.login}">
-                            </option>
-                        </select>
-                    </div>
+            <form method="post" action="?" modelAttribute="settingsDTO"
+                  class="form-horizontal">
 
-                    <div>
-                        Dictionary:
-                        <select class="form-control" th:field="${settingsDTO.dictionaryCode}"
-                                id="dictionaryCode">
-                            <option th:each="dictionary : ${dictionaries.entrySet()}"
-                                    th:value="${dictionary.getKey()}"
-                                    th:text="${dictionary.getValue()}"></option>
-                        </select>
-                    </div>
+                <div class="row-form-center">
+                    <label for="userLogin">User:</label>
+                    <select class="form-control" th:field="${settingsDTO.userId}"
+                            id="userLogin">
+                        <option th:each="user : ${users}"
+                                th:value="${user.id}"
+                                th:selected="${user.id == settingsDTO.userId}"
+                                th:text="${user.login}">
+                        </option>
+                    </select>
+                </div>
 
-                    <button type="submit" class="btn btn-success">Select</button>
-                </form>
+                <div class="row-form-center">
+                    <label for="dictionaryCode">Dictionary:</label>
+                    <select class="form-control" th:field="${settingsDTO.dictionaryCode}"
+                            id="dictionaryCode">
+                        <option th:each="dictionary : ${dictionaries.entrySet()}"
+                                th:value="${dictionary.getKey()}"
+                                th:text="${dictionary.getValue()}"></option>
+                    </select>
+                </div>
 
-            </div>
+                <div class="row-form-center">
+                    <button type="submit" class="btn btn-success">
+                        Select
+                    </button>
+                </div>
+
+            </form>
+
         </div>
-
     </div>
-</div>
+
+</th:block>
 
 </body>
 </html>
