displaying version number in a footer

--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -27,5 +27,10 @@
     </div>
 </div>
 
+<footer class="footer">
+    <span class="text-muted"
+          th:text="|Webdict v${@environment.getProperty('info.build.version')}|"></span>
+</footer>
+
 </body>
 </html>
