--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -32,5 +32,7 @@
           th:text="|Webdict v${@environment.getProperty('info.build.version')}|"></span>
 </footer>
 
+<th:block layout:fragment="endScripts"></th:block>
+
 </body>
 </html>
