--- a/src/main/resources/templates/dict/top.html
+++ b/src/main/resources/templates/dict/top.html
@@ -12,7 +12,7 @@
 
     <div class="panel panel-primary">
         <div class="panel-heading" id="dict-word">
-            <span th:text="${wordrank.wordName}"></span>
+            <span th:text="${wordrank?.wordName}"></span>
         </div>
         <div class="panel-body">
             <div id="dict-definition"></div>
@@ -35,10 +35,10 @@
 
     <div class="well">
         <div class="dictentry-row">
-            Rank: <span th:text="${wordrank.rankValue}"></span>
+            Rank: <span th:text="${wordrank?.rankValue}"></span>
         </div>
         <div class="dictentry-row">
-            Last use: <span th:text="${wordrank.lastUse}"></span>
+            Last use: <span th:text="${wordrank?.lastUse}"></span>
         </div>
     </div>
 
@@ -46,8 +46,8 @@
 
 <th:block layout:fragment="endScripts">
     <script th:inline="javascript">
-        rankId = [[${wordrank.rankId}]];
-        wordDefinition = [[${wordrank.definition}]];
+        rankId = [[${wordrank?.rankId}]];
+        wordDefinition = [[${wordrank?.definition}]];
     </script>
 </th:block>
 
