--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 
     <footer class="footer">
         <span class="text-muted"
-              th:text="|Webdict v${@environment.getProperty('info.build.version')}|"></span>
+              th:text="|WebDict v${@environment.getProperty('info.build.version')}|"></span>
     </footer>
 
 </th:block>
