--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,16 +12,16 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
 
-                    <li th:class="${activeTab == 'home'} ? 'active' : null"><a
+                    <li th:class="${activeTab == 'settings'} ? 'active' : null"><a
                             th:href="@{/settings}">Settings</a>
                     </li>
-                    <li th:class="${activeTab == 'home'} ? 'active' : null"><a
+                    <li th:class="${activeTab == 'top'} ? 'active' : null"><a
                             th:href="@{/top}">Top</a>
                     </li>
-                    <li th:class="${activeTab == 'home'} ? 'active' : null"><a
+                    <li th:class="${activeTab == 'all'} ? 'active' : null"><a
                             th:href="@{/all}">All words</a>
                     </li>
-                    <li th:class="${activeTab == 'home'} ? 'active' : null"><a
+                    <li th:class="${activeTab == 'add'} ? 'active' : null"><a
                             th:href="@{/add}">Add word</a>
                     </li>
 
