default location set to settings page

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,7 +7,7 @@
     <nav class="navbar navbar-inverse bg-inverse no-rounding">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebDict</a>
+                <a class="navbar-brand" th:href="@{/settings}">WebDict</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
