--- a/src/main/resources/templates/word/listAll.html
+++ b/src/main/resources/templates/word/listAll.html
@@ -12,13 +12,16 @@
     <div class="panel panel-primary">
         <div class="panel-heading" id="dict-word">Dictionary words</div>
         <div class="panel-body">
-            <table class="table">
+
+            <table class="table table-striped table-hover">
+                <thead class="thead-inverse">
                 <tr>
                     <th>Word</th>
                     <th>Definition</th>
                     <th>Rank</th>
                 </tr>
-
+                </thead>
+                <tbody>
                 <th:block th:each="wordrank : ${wordranks}">
                     <tr>
                         <td th:text="${wordrank.wordName}"></td>
@@ -26,8 +29,9 @@
                         <td th:text="${wordrank.rankValue}"></td>
                     </tr>
                 </th:block>
-
+                </tbody>
             </table>
+
         </div>
     </div>
 
