--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -21,7 +21,7 @@
 
 <th:block th:replace="fragments/navbar :: navbar"></th:block>
 
-<div id="container" class="panel panel-default">
+<div class="container panel panel-default">
     <div class="panel-body">
 
         <th:block layout:fragment="content"></th:block>
