Saving tries count for ranks

--- a/src/main/resources/templates/word/listAll.html
+++ b/src/main/resources/templates/word/listAll.html
@@ -19,6 +19,7 @@
                     <th>Word</th>
                     <th>Definition</th>
                     <th>Rank</th>
+                    <th>Tries</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -27,6 +28,7 @@
                         <td th:text="${wordrank.wordName}"></td>
                         <td th:text="${wordrank.definition}"></td>
                         <td th:text="${wordrank.rankValue}"></td>
+                        <td th:text="${wordrank.triesCount}"></td>
                     </tr>
                 </th:block>
                 </tbody>
