--- a/src/main/resources/templates/word/top.html
+++ b/src/main/resources/templates/word/top.html
@@ -38,6 +38,9 @@
             Rank: <span th:text="${wordrank?.rankValue}"></span>
         </div>
         <div class="dictentry-row">
+            Tries count: <span th:text="${wordrank?.triesCount}"></span>
+        </div>
+        <div class="dictentry-row">
             Last use: <span th:text="${wordrank?.lastUse}"></span>
         </div>
     </div>
