--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -49,7 +49,7 @@
 
                 <div class="row-form-center">
                     <button type="submit" class="btn btn-success">
-                        Select
+                        Save
                     </button>
                 </div>
 
