Test improvements, view glyphicon

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -40,7 +40,7 @@
 
                 <div class="row-form-center">
                     <button type="submit" class="btn btn-success">
-                        Save
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Save
                     </button>
                 </div>
 
