Create statistics page

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -31,6 +31,9 @@
                     <li th:class="${activeTab == 'add'} ? 'active' : null"><a
                             th:href="@{/add}">Add word</a>
                     </li>
+                    <li th:class="${activeTab == 'statistics'} ? 'active' : null"><a
+                            th:href="@{/statistics}">Statistics</a>
+                    </li>
 
                 </ul>
             </div>
