Add Basic statistics data

--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -15,7 +15,14 @@
 
             All words: <span th:text="${allWordsCount}"></span>
             <br/>
-
+            Trained words: <span th:text="${trainedCount}"></span>
+            <br/>
+            Touched words: <span th:text="${touchedCount}"></span>
+            <br/>
+            Cooling down words: <span th:text="${coolingDownCount}"></span>
+            <br/>
+            Training in progress words: <span th:text="${trainingInProgressCount}"></span>
+            <br/>
 
         </div>
     </div>
