--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -16,20 +16,20 @@
             <th:block th:each="dictStat : ${dictStats}">
                 <div class="panel panel-default">
                     <div class="panel-heading"
-                         th:text="${'Dictionary: ' + dictStat.dictDisplayName}"></div>
+                         th:text="${'Dictionary: ' + dictStat?.dictDisplayName}"></div>
                     <div class="panel-body">
 
                         <h5>Trained words:</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped"
                                  role="progressbar"
-                                 th:attr="aria-valuenow=${dictStat.stats.trainedPercentage}"
+                                 th:attr="aria-valuenow=${dictStat.stats?.trainedPercentage}"
                                  aria-valuemin="0" aria-valuemax="100"
-                                 th:style="'width:'+${dictStat.stats.trainedPercentage}+'%;'">
+                                 th:style="'width:'+${dictStat.stats?.trainedPercentage}+'%;'">
                             <span class="progress-centered">
-                                <span th:text="${dictStat.stats.trainedCount}"></span>
+                                <span th:text="${dictStat.stats?.trainedCount}"></span>
                                 /
-                                <span th:text="${dictStat.stats.allWordsCount}"></span>
+                                <span th:text="${dictStat.stats?.allWordsCount}"></span>
                             </span>
                             </div>
                         </div>
@@ -38,13 +38,13 @@
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped"
                                  role="progressbar"
-                                 th:attr="aria-valuenow=${dictStat.stats.trainingInProgressPercentage}"
+                                 th:attr="aria-valuenow=${dictStat.stats?.trainingInProgressPercentage}"
                                  aria-valuemin="0" aria-valuemax="100"
-                                 th:style="'width:'+${dictStat.stats.trainingInProgressPercentage}+'%;'">
+                                 th:style="'width:'+${dictStat.stats?.trainingInProgressPercentage}+'%;'">
                             <span class="progress-centered">
-                                <span th:text="${dictStat.stats.trainingInProgressCount}"></span>
+                                <span th:text="${dictStat.stats?.trainingInProgressCount}"></span>
                                 /
-                                <span th:text="${dictStat.stats.allWordsCount}"></span>
+                                <span th:text="${dictStat.stats?.allWordsCount}"></span>
                             </span>
                             </div>
                         </div>
@@ -52,14 +52,14 @@
                         <h5>Touched words:</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped" role="progressbar"
-                                 th:attr="aria-valuenow=${dictStat.stats.touchedPercentage}"
+                                 th:attr="aria-valuenow=${dictStat.stats?.touchedPercentage}"
                                  aria-valuemin="0"
                                  aria-valuemax="100"
-                                 th:style="'width:'+${dictStat.stats.touchedPercentage}+'%;'">
+                                 th:style="'width:'+${dictStat.stats?.touchedPercentage}+'%;'">
                             <span class="progress-centered">
-                                <span th:text="${dictStat.stats.touchedCount}"></span>
+                                <span th:text="${dictStat.stats?.touchedCount}"></span>
                                 /
-                                <span th:text="${dictStat.stats.allWordsCount}"></span>
+                                <span th:text="${dictStat.stats?.allWordsCount}"></span>
                             </span>
                             </div>
                         </div>
@@ -68,13 +68,13 @@
                         <div class="progress">
                             <div class="progress-bar progress-bar-danger progress-bar-striped"
                                  role="progressbar"
-                                 th:attr="aria-valuenow=${dictStat.stats.coolingDownPercentage}"
+                                 th:attr="aria-valuenow=${dictStat.stats?.coolingDownPercentage}"
                                  aria-valuemin="0" aria-valuemax="100"
-                                 th:style="'width:'+${dictStat.stats.coolingDownPercentage}+'%;'">
+                                 th:style="'width:'+${dictStat.stats?.coolingDownPercentage}+'%;'">
                             <span class="progress-centered">
-                                <span th:text="${dictStat.stats.coolingDownCount}"></span>
+                                <span th:text="${dictStat.stats?.coolingDownCount}"></span>
                                 /
-                                <span th:text="${dictStat.stats.allWordsCount}"></span>
+                                <span th:text="${dictStat.stats?.allWordsCount}"></span>
                             </span>
                             </div>
                         </div>
