add few stylesheet cosmetic improvements

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -25,10 +25,10 @@
                             th:href="@{/top}">Top</a>
                     </li>
                     <li th:class="${activeTab == 'all'} ? 'active' : null"><a
-                            th:href="@{/all}">All words</a>
+                            th:href="@{/all}">All</a>
                     </li>
                     <li th:class="${activeTab == 'add'} ? 'active' : null"><a
-                            th:href="@{/add}">Add word</a>
+                            th:href="@{/add}">Add</a>
                     </li>
                     <li th:class="${activeTab == 'statistics'} ? 'active' : null"><a
                             th:href="@{/statistics}">Statistics</a>
