--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -15,7 +15,7 @@
 
             <th:block th:each="dictStat : ${dictStats}">
                 <div class="panel panel-default">
-                    <div class="panel-heading"
+                    <div class="panel-heading statistics-dictionary-name"
                          th:text="${'Dictionary: ' + dictStat.dictDisplayName}"></div>
                     <div class="panel-body">
 
