--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -41,6 +41,14 @@ body {
     width: 100%;
 }
 
+.row-form-add-word > .input-group-addon {
+    min-width: 8em;
+}
+
+.statistics-dictionary-name {
+    font-weight: bold;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
