Improve main container margin viewing

--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -22,7 +22,7 @@
 
 <th:block th:replace="fragments/navbar :: navbar"></th:block>
 
-<div class="container panel panel-default">
+<div class="container panel panel-default" id="main-container">
     <div class="panel-body">
 
         <th:block th:replace="fragments/alerts :: alerts"></th:block>
