Adding new words, alerts, listing all words in Angular

--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -19,13 +19,13 @@
           routerLink="/top">Top</a>
         </li>
         <li [class.active]="activeTab == 'all'"><a
-          routerLink="/all">All</a>
+          routerLink="/list">All</a>
         </li>
         <li [class.active]="activeTab == 'add'"><a
           routerLink="/add">Add</a>
         </li>
         <li [class.active]="activeTab == 'statistics'"><a
-          routerLink="/statistics">Statistics</a>
+          routerLink="/stats">Statistics</a>
         </li>
       </ul>
 
