--- a/src/frontend/src/app/pages/addword/add-word.component.html
+++ b/src/frontend/src/app/pages/addword/add-word.component.html
@@ -5,13 +5,13 @@
     <div class="input-group row-form-add-word">
       <span class="input-group-addon" id="basic-addon1">Word</span>
       <input class="form-control" placeholder="Word"
-             aria-describedby="basic-addon1" [(ngModel)]="wordName">
+             aria-describedby="basic-addon1" [(ngModel)]="wordName" (keyup.enter)="addNewWord()">
     </div>
 
     <div class="input-group row-form-add-word">
       <span class="input-group-addon" id="basic-addon2">Definition</span>
       <input class="form-control" placeholder="Definition"
-             aria-describedby="basic-addon2" [(ngModel)]="definition">
+             aria-describedby="basic-addon2" [(ngModel)]="definition" (keyup.enter)="addNewWord()">
     </div>
 
     <div class="row-form-add-word">
