--- a/src/frontend/src/app/alert/alerts-panel.component.html
+++ b/src/frontend/src/app/alert/alerts-panel.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let alert of alerts">
   <div
     class="alert alert-dismissible {{alert?.cssClass}}"
-    role="alert">
+    role="alert" (click)="hideAlert(alert)">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span></button>
     {{alert?.message}}
