--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -12,35 +12,35 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li [class.active]="activeTab == 'settings'"><a
+        <li routerLinkActive="active"><a
           routerLink="/settings">Settings</a>
         </li>
-        <li [class.active]="activeTab == 'top'"><a
+        <li routerLinkActive="active"><a
           routerLink="/top">Top</a>
         </li>
-        <li [class.active]="activeTab == 'all'"><a
+        <li routerLinkActive="active"><a
           routerLink="/list">All</a>
         </li>
-        <li [class.active]="activeTab == 'add'"><a
+        <li routerLinkActive="active"><a
           routerLink="/add">Add</a>
         </li>
-        <li [class.active]="activeTab == 'statistics'"><a
+        <li routerLinkActive="active"><a
           routerLink="/stats">Statistics</a>
         </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right"
-          *ngIf="settings_user != null && settings_dictionary != null">
+          *ngIf="username != null && dictionaryName != null">
         <li>
           <a routerLink="/settings">
             <span class="glyphicon glyphicon-user"></span>
-            {{settings_user}}
+            {{username}}
           </a>
         </li>
         <li>
           <a routerLink="/settings">
             <span class="glyphicon glyphicon-book"></span>
-            {{settings_dictionary}}
+            {{dictionaryName}}
           </a>
         </li>
       </ul>
