Improve Logging in and out
add logging out, fix reloading pages
redirecting to preious url after login

--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -43,6 +43,11 @@
             {{dictionaryName}}
           </a>
         </li>
+        <li>
+          <a (click)="logOut()" data-toggle="tooltip" title="Log out">
+            <span class="glyphicon glyphicon-log-out"></span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
