Fix Css empty block height

--- a/src/frontend/src/app/footer/footer.component.html
+++ b/src/frontend/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="footer">
   <span
-    class="text-muted">{{environmentInfo?.environmentName}} v{{environmentInfo?.buildVersion}} (frontend v{{frontendVersion}})</span>
+    class="text-muted">{{environmentInfo?.environmentName}} v{{environmentInfo?.buildVersion}} (front-end v{{frontendVersion}})</span>
 </footer>
