--- a/src/frontend/src/app/top/top-word.component.css
+++ b/src/frontend/src/app/top/top-word.component.css
@@ -6,6 +6,12 @@
   text-align: center;
   font-weight: bold;
   font-size: 1.2em;
+
+}
+
+/* empty block with same height as non-empty */
+#dict-word:empty:before {
+  content: "\200b"; /* unicode zero width space character */
 }
 
 #dict-definition {
