Add hardest word page

--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -19,6 +19,9 @@
           routerLink="/top">Top</a>
         </li>
         <li routerLinkActive="active"><a
+          routerLink="/hardest">Hardest</a>
+        </li>
+        <li routerLinkActive="active"><a
           routerLink="/list">All</a>
         </li>
         <li routerLinkActive="active"><a
