common top page

--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -16,10 +16,13 @@
           routerLink="/settings">Settings</a>
         </li>
         <li routerLinkActive="active"><a
-          routerLink="/top">Top</a>
+          routerLink="/top/byRank">Top</a>
         </li>
         <li routerLinkActive="active"><a
-          routerLink="/hardest">Hardest</a>
+          routerLink="/top/byHardest">Hardest</a>
+        </li>
+        <li routerLinkActive="active"><a
+          routerLink="/top/byOldest">Oldest</a>
         </li>
         <li routerLinkActive="active"><a
           routerLink="/list">All</a>
