Counter for all words number

--- a/src/frontend/src/app/wordslist/words-list.component.html
+++ b/src/frontend/src/app/wordslist/words-list.component.html
@@ -1,5 +1,6 @@
 <div class="panel panel-primary">
-  <div class="panel-heading" id="dict-word">Dictionary words</div>
+  <div class="panel-heading" id="dict-word">Dictionary words <span>({{wordranks.length}})</span>
+  </div>
   <div class="panel-body">
 
     <table class="table table-striped table-hover">
