--- a/src/frontend/src/app/navbar/navbar.component.html
+++ b/src/frontend/src/app/navbar/navbar.component.html
@@ -12,15 +12,28 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a
-          routerLink="/settings">Settings</a>
+        <li routerLinkActive="active">
+          <a routerLink="/settings">Settings</a>
         </li>
-        <li routerLinkActive="active"><a
-          routerLink="/top">Top</a>
+
+        <li class="dropdown" routerLinkActive="active">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Word<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li routerLinkActive="active">
+              <a routerLink="/word/top">Top</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="/word/hardest">Hardest</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="/word/latest">Latest</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="/word/oldest">Oldest</a>
+            </li>
+          </ul>
         </li>
-        <li routerLinkActive="active"><a
-          routerLink="/hardest">Hardest</a>
-        </li>
+
         <li routerLinkActive="active"><a
           routerLink="/list">All</a>
         </li>
